Refactor message validation and color handling for improved error handling and clarity